--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Hello World
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="static/css/style.css" rel="stylesheet">
+
+    <title>Khaled Shehada</title>
+  </head>
+  <body>
+
+    <div data-aos="fade-in" data-aos-duration="1000"
+      class="jumbotron jumbotron-fluid text-center ">
+      <h3 data-aos="fade-in" data-aos-duration="2000"
+        class="display-5 quote">We began as wanderers, and we are
+        wanderers still. We have lingered long enough on the shores of the
+        cosmic ocean. We are ready at last to set sail for the stars.
+        <span class="lead">- Carl Sagan</span>
+      </h3>
+    </div>
+
+    <div class="section">
+      <div class="container d-flex align-items-center">
+        <img class="rounded-circle" id="profile-img" src="static/imgs/portfolio.png" style="margin-left: -15px;">
+        <div>
+          <h1 class="ml-3">Khaled Shehada</h1>
+          <div><h3 class="ml-3 typewriter">Software Engineer | AI Researcher</p></div>
+          <p class="ml-3"><i class="fas fa-phone-alt"></i> (857)-225-3060</p>
+          <p class="ml-3"><i class="fas fa-envelope"></i> <a href = "mailto:shehadak@mit.edu">shehadak@mit.edu</a></p>
+        </div>
+      </div>
+    </div>
+     
+
+    <div class="section">
+      <div class="container" style="text-align: center;">
+        <h1>Coming soon!</h1>
+      </div>
+    </div>
+
+    <footer class="footer mt-auto py-3">
+      <!-- <i class="fa fa-copyright" aria-hidden="true"></i> -->
+      <!-- <i class="far fa-copyright" style="color: #000000;"></i> -->
+    </footer>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        easing: 'ease-in-quad',
+      });
+    </script>
+
+  </body>
+</html>
